--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="menu-openner"><span>0</span>🛒</div>
     </header>
     <main>
-        <h1>MEGA pizzaria</h1>
+        <h1>MEGA PIZZARIA</h1>
         <div class="pizza-area"></div>
     </main>
     <aside>
